# FinsightAI

./: LICENSE  Makefile  README.md  docker-compose.yml  flowchart.mmd  pyproject.toml
finsight/: assistant.py  feeder.py  insert_news.py  plantilla_resumen.md
finsight/api/: README.md
finsight/chunker/: README.md  chunker.py
finsight/chunker/strategies/: base.py  recursive.py  sentence.py  token.py
finsight/config/: README.md
finsight/crawler/: README.md  crawler.py
finsight/crawler/core/: content_extractor.py  url_extractor.py
finsight/crawler/core/content/: base.py
finsight/crawler/core/sanitizer/: urls.py
finsight/crawler/core/url/: base.py  deep_search.py  scroll_search.py
finsight/crawler/sanitizer/: datetime.py
finsight/crawler/schemas/: yahoo_finance_schema.json
finsight/crawler/scrapers/: investing.py  seeking_alpha.py  yahoo_finance.py
finsight/crawler/websites/: reuters.py  yahoo_finance.py
finsight/embedder/: README.md
finsight/executor/: README.md
finsight/interface/: README.md
finsight/logger/: README.md
finsight/models/: README.md  client.py  open_ai.py
finsight/portfolio/: README.md
finsight/preprocessor/: README.md
finsight/reporter/: README.md
finsight/retriever/: README.md
finsight/retriever/agent/: inserter.py  searcher.py
finsight/retriever/client/: connection.py  interface.py
finsight/scraper/: README.md
scripts/: setup-linux.sh
